# google-health-insurance-avatar

./: .gitignore  package-lock.json  package.json  start-dev.sh
.github/workflows/: deploy.yml
backend/: .env.example  package.json  server.js
backend/agent/: .env.example  a2ui_schema.py  agent.py  avatar_dpp.txt  discharge_form.py  pyproject.toml
backend/routes/: agent.js  avatar.js  dpp.js  fields.js
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: demo-guide.html
frontend/src/: App.tsx  dpp.ts  index.css
frontend/src/components/: A2UIRenderer.tsx  AvatarPanel.tsx  BrowserCheck.tsx
frontend/src/hooks/: useA2UIStream.ts  useAvatarSession.ts  useTranscriptExtractor.ts
frontend/src/lib/: dataModel.ts
frontend/src/types/: a2ui.ts
